@@ -1,3 +1,12 @@
+2018-07-17  Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap+Deleting.m
+	* DBSoap.h
+	* DBSoap.m
+	* DBSoapCSV.h
+	* DBSoapCSV.m
+	implement getUpdate API
+
 2018-05-08  Riccardo Mottola <rm@gnu.org>
 
 	* DBSoapCSV.m
